deployment/docker-registry/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: docker-registry
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/rewrite-target: /
        nginx.ingress.kubernetes.io/ssl-redirect: 'true'
        nginx.ingress.kubernetes.io/proxy-body-size: 30720m
        certmanager.k8s.io/cluster-issuer: 'letsencrypt-http01'
    labels:
        app: docker-registry
spec:
    tls:
        - secretName: docker-registry-tls
          hosts:
              - ${REGISTRY_FQN}

    rules:
        - host: ${REGISTRY_FQN}
          http:
              paths:
                  - path: /
                    backend:
                        serviceName: docker-registry
                        servicePort: 5000
